@@ -1,3 +1,8 @@
+2002-01-21  Simon Perkins  <s.perkins@lanl.gov>
+
+	* frmts/fits/fitsdataset.cpp: Silently truncate when writing
+	values to FITS files outside valid range.
+
 2002-01-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* port/cpl_config.h.in, port/cpl_port.h, aclocal.m4, configure:
